src/objects/Weekly_Pipe_Data_Run_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Analytic_Snapshot_Name__c</fullName>
        <label>Analytic Snapshot Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytic_Snapshot_Running_User__c</fullName>
        <label>Analytic Snapshot Running User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Group_Owner_Team__c</fullName>
        <label>Group^Owner Team</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>LEFT(Group_Owner_Team__c,FIND(&quot;^&quot;,Group_Owner_Team__c)-1)</formula>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <formula>RIGHT(Group_Owner_Team__c,LEN(Group_Owner_Team__c)-FIND(&quot;^&quot;,Group_Owner_Team__c))</formula>
        <label>Owner Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_FQ__c</fullName>
        <formula>CASE( 
month(DATEVALUE(Execution_Time__c)), 
1,Date(Year(DATEVALUE(Execution_Time__c)),1,1), 
2,Date(Year(DATEVALUE(Execution_Time__c)),1,1), 
3,Date(Year(DATEVALUE(Execution_Time__c)),1,1), 
4,Date(Year(DATEVALUE(Execution_Time__c)),4,1), 
5,Date(Year(DATEVALUE(Execution_Time__c)),4,1), 
6,Date(Year(DATEVALUE(Execution_Time__c)),4,1), 
7,Date(Year(DATEVALUE(Execution_Time__c)),7,1), 
8,Date(Year(DATEVALUE(Execution_Time__c)),7,1), 
9,Date(Year(DATEVALUE(Execution_Time__c)),7,1), 
10,Date(Year(DATEVALUE(Execution_Time__c)),10,1), 
11,Date(Year(DATEVALUE(Execution_Time__c)),10,1), 
12,Date(Year(DATEVALUE(Execution_Time__c)),10,1), DATE(2015,01,01) )</formula>
        <label>Start Date of FQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Pipe__c</fullName>
        <label>Total Pipe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weighted_Forecast__c</fullName>
        <label>Weighted Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Weekly Pipe Data (Run Rate)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Weekly Pipe Data (Run Rate) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Pipe Data (Run Rate)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>